Switch sans-serif font to Roboto

--- a/css/reveal-override.scss
+++ b/css/reveal-override.scss
@@ -1,10 +1,9 @@
-@import url(//fonts.googleapis.com/css?family=Cabin:400,700);
+@import url(//fonts.googleapis.com/css?family=Roboto:400,700);
 @import url(//fonts.googleapis.com/css?family=Special+Elite:400,700);
-@import url(//fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 @import url(//cdn.jsdelivr.net/npm/hack-font/build/web/hack.css);
 
 .reveal {
-    font-family: "Open Sans Condensed", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: normal;
     color: #555555;
 
@@ -70,7 +69,7 @@
     }
 
     h1, h2, h3, h4, h5, h6 {
-        font-family: "Cabin", sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: bold;
         text-transform: uppercase;
 	strong {
