--- a/css/reveal-override.scss
+++ b/css/reveal-override.scss
@@ -1,10 +1,10 @@
-@import url(//fonts.googleapis.com/css?family=Roboto:400,700);
+@import url(//fonts.googleapis.com/css?family=Roboto:300,400,700);
 @import url(//fonts.googleapis.com/css?family=Special+Elite:400,700);
 @import url(//cdn.jsdelivr.net/npm/hack-font/build/web/hack.css);
 
 .reveal {
     font-family: "Roboto", sans-serif;
-    font-weight: normal;
+    font-weight: 300;
     color: #555555;
 
     strong {
