--- a/css/reveal-override.scss
+++ b/css/reveal-override.scss
@@ -53,14 +53,7 @@
     }
 
     h1, h2 {
-        text-stroke: 1px black;
-        text-shadow:
-            3px 3px 0 #000,
-            -1px -1px 0 #000,
-            1px -1px 0 #000,
-            -1px 1px 0 #000,
-            1px 1px 0 #000;
-        color: white;
+        color: black;
     }
 
     h3, h4, h5, h6 {
@@ -70,7 +63,6 @@
 
     h1, h2, h3, h4, h5, h6 {
         font-family: "Roboto", sans-serif;
-        font-weight: bold;
         text-transform: uppercase;
 	strong {
             color: black;
