--- a/css/reveal-override.css
+++ b/css/reveal-override.css
@@ -43,9 +43,7 @@
   font-size: 1.5em;
 }
 .reveal h1, .reveal h2 {
-  text-stroke: 1px black;
-  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-  color: white;
+  color: black;
 }
 .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
   text-shadow: none;
@@ -53,7 +51,6 @@
 }
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
   font-family: "Roboto", sans-serif;
-  font-weight: bold;
   text-transform: uppercase;
 }
 .reveal h1 strong, .reveal h2 strong, .reveal h3 strong, .reveal h4 strong, .reveal h5 strong, .reveal h6 strong {
